zed: enable tree view for git panel

--- a/home/dot_config/zed/settings.json
+++ b/home/dot_config/zed/settings.json
@@ -120,6 +120,9 @@
       "enabled": false,
     },
   },
+  "git_panel": {
+    "tree_view": true,
+  },
   "indent_guides": {
     "coloring": "indent_aware",
   },
